--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>EMR UI</title>
     <meta name="description" content="The location for my Senior Thesis.">
     <meta name="keywords" content="thesis, senior, college">
-    <meta property="og:title" content="thesis.brennanjflory.com">
+    <meta property="og:title" content="thesis.brennanjflory.xyz">
     <meta property="og:description" content="The location for my Senior Thesis.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="http://thesis.brennanjflory.com">
-    <meta property="og:image" name="Image" content="http://thesis.brennanjflory.com/assets/thumb.png">
+    <meta property="og:url" content="http://thesis.brennanjflory.xyz">
+    <meta property="og:image" name="Image" content="http://thesis.brennanjflory.xyz/assets/thumb.png">
     <link rel="shortcut icon" href="../favicon.png" type="image/x-icon">
     <link rel="icon" type="image/png" href="../favicon.png">
 
