--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 <body>
     <div id="main-wrapper">
+        <embed src="../EMR/Split/EMR2020_Orange_Pages.pdf" width="500" height="375" type="application/pdf">
     </div>
 
 </body>
