--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <th style="width:20%;">Guide No.</th>
                     <th style="width:60%;">Name of Material</th>
                 </tr>
-                <tr class="custom-clickable-row" id="view-pdf-btn " onclick="previewFile() " ; margin: 100px 0 0 80px; " disabled>
+                <tr class="custom-clickable-row" id="view-pdf-btn " onclick="preview117() " ; margin: 100px 0 0 80px; " disabled>
                     <td>-----</td>
                     <td>117</td>
                     <td>AC</td>
