--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         </video>
         </div>
         <div class="column">
+            <script type="text/javascript" src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
             <input type="text" id="myInput" onkeyup="search()" placeholder="Search for Placards">
 
             <table id="myTable">
