--- a/index.html
+++ b/index.html
@@ -53,30 +53,266 @@
 
             <table id="myTable">
                 <tr class="header">
-                    <th style="width:20%;">ID No.</th>
-                    <th style="width:20%;">Guide No.</th>
+                    <th style="width:10%;">ID No.</th>
+                    <th style="width:10%;">Guide No.</th>
                     <th style="width:60%;">Name of Material</th>
+                    <th style="width:10%;">Orange Guide</th>
+                    <th style="width:10%;">Green Guide</th>
                 </tr>
-                <tr class="custom-clickable-row" id="view-pdf-btn " onclick="preview117() " ; margin: 100px 0 0 80px; " disabled>
-                    <td>-----</td>
-                    <td>117</td>
-                    <td>AC</td>
-                </tr>
-                <tr>
-                    <td>-----</td>
-                    <td>154</td>
-                    <td>Adamsite</td>
-                </tr>
-                <tr>
-                    <td>-----</td>
-                    <td>112</td>
-                    <td>Ammonium nitrate-fuel oil mixtures</td>
-                </tr>
-                <tr>
-                    <td>-----</td>
-                    <td>158</td>
-                    <td>Biological agents</td>
-                </tr>
+                <tBody>
+                    <tr>
+                        <td style="width:10%; ">-----</td>
+                        <td style="width:10%; ">112</td>
+                        <td style="width:60%; ">Ammonium nitrate-fuel oil mixtures</td>
+                        <td style="width:10%; " class="custom-clickable-row " id="view-pdf-btn " onclick="preview112() " ; margin: 100px 0 0 80px; " disabled>Orange Guide</td>
+                        <td style="width:10%; " class="custom-clickable-row " id="view-pdf-btn " onclick="preview117() " ; margin: 100px 0 0 80px; " disabled>Green Guide</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview112() " ; margin: 100px 0 0 80px; " disabled>
+                            <td>-----</td>
+                            <td>112</td>
+                            <td>Blasting agent, n.o.s.</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview112() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>-----</td>
+                        <td>112</td>
+                        <td>Explosives, division 1.1, 1.2, 1.3 or 1.5</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1310</td>
+                        <td>113</td>
+                        <td>Ammonium picrate, wetted with not less than 10% water</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1320</td>
+                        <td>113</td>
+                        <td>Dinitrophenol, wetted with not less than 15% water</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1321</td>
+                        <td>113</td>
+                        <td>Dinitrophenolates, wetted with not less than 15% water</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1322</td>
+                        <td>113</td>
+                        <td>Dinitroresorcinol, wetted with not less than 15% water</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1336</td>
+                        <td>113</td>
+                        <td>Nitroguanidine, wetted with not less than 20% water</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1336</td>
+                        <td>113</td>
+                        <td>Picrite, wetted with not less than 20% water</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1337</td>
+                        <td>113</td>
+                        <td>Nitrostarch, wetted with not less than 20% water</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1344</td>
+                        <td>113</td>
+                        <td>Picric acid, wetted with not less than 30% water</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1344</td>
+                        <td>113</td>
+                        <td>Trinitrophenol, wetted with not less than 30% water</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1347</td>
+                        <td>113</td>
+                        <td>Silver picrate, wetted with not less than 30% water</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1348</td>
+                        <td>113</td>
+                        <td>Sodium dinitro-o-cresolate, wetted with not less than 15% water</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1349</td>
+                        <td>113</td>
+                        <td>Sodium picramate, wetted with not less than 20% water</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1354</td>
+                        <td>113</td>
+                        <td>Trinitrobenzene, wetted with not less than 30% water</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1355</td>
+                        <td>113</td>
+                        <td>Trinitrobenzoic acid, wetted with not less than 30% water</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1356</td>
+                        <td>113</td>
+                        <td>TNT, wetted with not less than 30% water</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1356</td>
+                        <td>113</td>
+                        <td>Trinitrotoluene, wetted with not less than 30% water</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1357</td>
+                        <td>113</td>
+                        <td>Urea nitrate, wetted with not less than 20% water</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1517</td>
+                        <td>113</td>
+                        <td>Zirconium picramate, wetted with not less than 20% water</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>1571</td>
+                        <td>113</td>
+                        <td>Barium azide, wetted with not less than 50% water</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>2555</td>
+                        <td>113</td>
+                        <td>Nitrocellulose with water, not less than 25% water</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>2556</td>
+                        <td>113</td>
+                        <td>Nitrocellulose with alcohol, not less than 25% alcohol</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>2852</td>
+                        <td>113</td>
+                        <td>Dipicryl sulfide, wetted with not less than 10% water</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>3317</td>
+                        <td>113</td>
+                        <td>2-Amino-4,6-dinitrophenol, wetted with not less than 20% water</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>3319</td>
+                        <td>113</td>
+                        <td>Nitroglycerin mixture, desensitized, solid, n.o.s., with more than 2% but not more than 10% Nitroglycerin</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>3343</td>
+                        <td>113</td>
+                        <td>Nitroglycerin mixture, desensitized, liquid, flammable, n.o.s., with not more than 30% Nitroglycerin</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>3344</td>
+                        <td>113</td>
+                        <td>Pentaerythrite tetranitrate mixture, desensitized, solid, n.o.s., with more than 10% but not more than 20% PETN</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>3344</td>
+                        <td>113</td>
+                        <td>PETN mixture, desensitized, solid, n.o.s., with more than 10% but not more than 20% PETN</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>3357</td>
+                        <td>113</td>
+                        <td>Nitroglycerin mixture, desensitized, liquid, n.o.s., with not more than 30% Nitroglycerin</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>3364</td>
+                        <td>113</td>
+                        <td>Picric acid, wetted with not less than 10% water</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>3364</td>
+                        <td>113</td>
+                        <td>Trinitrophenol, wetted with not less than 10% water</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>3365</td>
+                        <td>113</td>
+                        <td>Picryl chloride, wetted with not less than 10% water</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>3365</td>
+                        <td>113</td>
+                        <td>Trinitrochlorobenzene, wetted with not less than 10% water</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>3366</td>
+                        <td>113</td>
+                        <td>TNT, wetted with not less than 10% water</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>3366</td>
+                        <td>113</td>
+                        <td>Trinitrotoluene, wetted with not less than 10% water</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>3367</td>
+                        <td>113</td>
+                        <td>Trinitrobenzene, wetted with not less than 10% water</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>3368</td>
+                        <td>113</td>
+                        <td>Trinitrobenzoic acid, wetted with not less than 10% water</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>3369</td>
+                        <td>113</td>
+                        <td>Sodium dinitro-o-cresolate, wetted with not less than 10% water</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>3370</td>
+                        <td>113</td>
+                        <td>Urea nitrate, wetted with not less than 10% water</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>3376</td>
+                        <td>113</td>
+                        <td>4-Nitrophenylhydrazine, with not less than 30% water</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>3379</td>
+                        <td>113</td>
+                        <td>Desensitized explosive, liquid, n.o.s.</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>3380</td>
+                        <td>113</td>
+                        <td>Desensitized explosive, solid, n.o.s.e</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>3474</td>
+                        <td>113</td>
+                        <td>1-Hydroxybenzotriazole, anhydrous, wetted with not less than 20% water</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview113() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>3474</td>
+                        <td>113</td>
+                        <td>1-Hydroxybenzotriazole, monohydrate</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview114() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>-----</td>
+                        <td>114</td>
+                        <td>Explosives, division 1.4 or 1.6</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview117() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>-----</td>
+                        <td>117</td>
+                        <td>AC</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview154() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>-----</td>
+                        <td>154</td>
+                        <td>Adamsite</td>
+                    </tr>
+                    <tr class="custom-clickable-row " id="view-pdf-btn " onclick="preview158() " ; margin: 100px 0 0 80px; " disabled>
+                        <td>-----</td>
+                        <td>158</td>
+                        <td>Biological agents</td>
+                    </tr>
+                </tBody>
             </table>
         </div>
     </div>
